src/objects/Sentry_Config__mdt/Sentry_Config__mdt.object-meta.xml
<CustomObject>
    <fullName>Sentry_Config__mdt</fullName>
    <label>Sentry Config</label>
    <pluralLabel>Sentry Configs</pluralLabel>
</CustomObject>