src/objects/Sentry_Config__mdt/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>