src/objects/Sentry_Config__mdt/fields/Max_Retries__c.field-meta.xml
<CustomField>
    <fullName>Max_Retries__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Max Retries</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>