src/objects/Sentry_Config__mdt/fields/Public_Key__c.field-meta.xml
<CustomField>
    <fullName>Public_Key__c</fullName>
    <label>Public Key</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>