src/objects/Sentry_Config__mdt/fields/Timeout_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Timeout_Seconds__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Timeout Seconds</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>